Fix alignment of table items

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -82,7 +82,12 @@ a {
   align-items: stretch;
   justify-content: center;
 }
-
+.flex-start {
+  justify-content: flex-start;
+}
+.flex-end {
+  justify-content: flex-end;
+}
 // dynamic displays based on viewport size
 .col-sm,
 .col-md,
